# esp32-serialiser

./: .gitmodules  CMakeLists.txt
core/: CMakeLists.txt
core/Inc/: main.h
libraries/fmt/: _CMakeLists.txt
libraries/gsl/: CMakeLists.txt
libraries/jsoncpp/: CMakeLists.txt
